objects/wkdw__EmployeeWorkExperience__c.object
<CustomObject>
    <description>Custom object to add, edit, and view work experience of an employee.</description>
    <fields>
        <fullName>wkdw__CompletionDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkdw__Description__c</fullName>
        <inlineHelpText>Describe your experience  and highlight your accomplishments.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkdw__IsOwner__c</fullName>
        <formula>$User.Id=OwnerId</formula>
        <label>Is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkdw__Ongoing__c</fullName>
        <formula>ISBLANK(wkdw__CompletionDate__c)</formula>
        <label>Ongoing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkdw__Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkdw__URLs__c</fullName>
        <inlineHelpText>Use line breaks to separate the URLs</inlineHelpText>
        <label>Related URLs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Portfolio Item</label>
    <listViews>
        <fullName>wkdw__All</fullName>
        <columns>NAME</columns>
        <columns>wkdw__Description__c</columns>
        <columns>wkdw__StartDate__c</columns>
        <columns>wkdw__CompletionDate__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>wkdw__CompletionDate</fullName>
        <active>true</active>
        <description>Validates that the end date comes after the start date.</description>
        <errorConditionFormula>AND(NOT(wkdw__Ongoing__c ),wkdw__StartDate__c  &gt; wkdw__CompletionDate__c)</errorConditionFormula>
        <errorDisplayField>wkdw__CompletionDate__c</errorDisplayField>
        <errorMessage>Enter an end date that occurs after the start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>wkdw__URLs</fullName>
        <active>true</active>
        <description>Validates the format of the URL.</description>
        <errorConditionFormula>IF(LEN(TRIM(wkdw__URLs__c)) &gt; 0, NOT(REGEX( wkdw__URLs__c , &quot;^((([a-zA-Z]+:)?\\/\\/.*)\\r?\\n?)*$&quot;)), false)</errorConditionFormula>
        <errorDisplayField>wkdw__URLs__c</errorDisplayField>
        <errorMessage>Enter a URL that starts with a valid protocol such as https:// or file:///.</errorMessage>
    </validationRules>
</CustomObject>